added API documentation for ClientController - configured entities models custom names and descriptions depending on Nelmio API doc bundle - cleaned PartnerController API documentation, DoctrineSubscriber, Partner and Client entities
